--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -1,2 +1,4 @@
 <h1>SimplePages#index</h1>
 <p>Find me in app/views/simple_pages/index.html.erb</p>
+
+<%= image_tag("travel.jpg", class: "img-responsive my-image") %> 
