--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>Nameofapp</title>
+  <title>Trademark</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -14,19 +14,82 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   </head>
-  <nav>
-    <ul>
-      <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "About", simple_pages_about_path %></li>
-      <li><%= link_to "Contact", simple_pages_contact_path %></li>
-    </ul>
-  </nav>
-
-  <body>
+  <div class="wrapper">
+    <body>
+      <header>
+        <nav>
+          <div class="menu-icon">
+            <i class="fa fa-bars fa-2x"></i>
+          </div>
+          <div class="logo">
+          <%= link_to "TM", root_path %>
+          </div>
+          <div class="menu">
+            <ul>
+              <li><%= link_to "Order", simple_pages_index_path %></li>
+              <li><%= link_to "About", simple_pages_about_path %></li>
+              <li><%= link_to "Contact", simple_pages_contact_path %></li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+    </div>
     <%= yield %>
 
-    <footer>
-      &copy; 2018 Bike Berlin
-    </footer>
+    <section id="footer">
+		  <div class="container">
+			  <div class="row text-center text-xs-center text-sm-left text-md-left">
+				  <div class="col-xs-12 col-sm-4 col-md-4">
+					  <h5>Quick links</h5>
+					  <ul class="list-unstyled quick-links">
+						  <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>Home</a></li>
+						  <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>About</a></li>
+						  <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>FAQ</a></li>
+						  <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>Get Started</a></li>
+						  <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>Videos</a></li>
+					  </ul>
+				  </div>
+				  <div class="col-xs-12 col-sm-4 col-md-4">
+					  <h5>Quick links</h5>
+					  <ul class="list-unstyled quick-links">
+						  <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>Home</a></li>
+						  <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>About</a></li>
+						  <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>FAQ</a></li>
+						  <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>Get Started</a></li>
+						  <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>Videos</a></li>
+					  </ul>
+				  </div>
+				  <div class="col-xs-12 col-sm-4 col-md-4">
+					  <h5>Quick links</h5>
+					  <ul class="list-unstyled quick-links">
+						  <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>Home</a></li>
+						  <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>About</a></li>
+						  <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>FAQ</a></li>
+						  <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>Get Started</a></li>
+						  <li><a href="https://wwwe.sunlimetech.com" title="Design and developed by"><i class="fa fa-angle-double-right"></i>Imprint</a></li>
+					  </ul>
+				  </div>
+			  </div>
+			  <div class="row">
+				  <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
+					  <ul class="list-unstyled list-inline social text-center">
+						  <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-facebook"></i></a></li>
+						  <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-twitter"></i></a></li>
+						  <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-instagram"></i></a></li>
+						  <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-google-plus"></i></a></li>
+						  <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02" target="_blank"><i class="fa fa-envelope"></i></a></li>
+					  </ul>
+				  </div>
+				  <hr>
+			  </div>	
+			  <div class="row">
+				  <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
+					  <p><u><a href="https://www.nationaltransaction.com/">National Transaction Corporation</a></u> is a Registered MSP/ISO of Elavon, Inc. Georgia [a wholly owned subsidiary of U.S. Bancorp, Minneapolis, MN]</p>
+					  <p class="h6">© All right Reversed.<a class="text-green ml-2" href="https://www.sunlimetech.com" target="_blank">Sunlimetech</a></p>
+				  </div>
+				  <hr>
+			  </div>	
+		  </div>
+	  </section>
   </body>
 </html>
